--- a/goobi-plugin-workflow-projectexport/module-main/pom.xml
+++ b/goobi-plugin-workflow-projectexport/module-main/pom.xml
@@ -30,6 +30,11 @@
 				</excludes>
 			</resource>
 		</resources>
+        <testResources>
+            <testResource>
+                <directory>${project.basedir}/../src/test/resources</directory>
+            </testResource>
+        </testResources>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
