--- a/module-gui/pom.xml
+++ b/module-gui/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-workflow-project-export</artifactId>
-    <version>24.13-SNAPSHOT</version>
+    <version>tomcat10-SNAPSHOT</version>
   </parent>
   <artifactId>plugin-workflow-project-export-gui</artifactId>
   <packaging>jar</packaging>
