--- a/module-base/pom.xml
+++ b/module-base/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-workflow-project-export</artifactId>
-    <version>tomcat10-SNAPSHOT</version>
+    <version>25.02-SNAPSHOT</version>
   </parent>
   <artifactId>plugin-workflow-project-export-base</artifactId>
   <packaging>jar</packaging>
