--- a/module-gui/pom.xml
+++ b/module-gui/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-workflow-project-export</artifactId>
-    <version>25.06-SNAPSHOT</version>
+    <version>25.06</version>
   </parent>
   <artifactId>plugin-workflow-project-export-gui</artifactId>
   <packaging>jar</packaging>
